<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#1a1a1a"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_checkup_score"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="36"
                android:textColor="#ff4444"
                android:textSize="80sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_checkup_last_time"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="2016-03-24"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="63dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="您的爱车处于"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="高危级别"
                android:textColor="#ff4444"
                android:textSize="30sp"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_checkup"
                android:text="@string/vehicle_checkup"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>