<!-- 提高定位精确度提示 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/bg_alert"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tips_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:text="@string/tips"
            android:textColor="@color/white"
            android:textSize="18sp"/>


        <TextView
            android:id="@+id/tv_tips_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="35dp"
            android:background="#dddddd"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tips_cancel"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <View
                android:id="@+id/v_tips_mid"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#dddddd"/>

            <TextView
                android:id="@+id/tv_tips_confirm"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>